<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/iconGray"
    android:layout_margin="@dimen/_25sdp">
<!--    android:layout_margin="@dimen/_20sdp"-->

    <TextView
        android:id="@+id/report_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/report"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/report_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_view"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/rounded_edit"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_message"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:textColor="@color/blue"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:background="@drawable/rounded_corner"/>
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:textColor="@color/blue"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:background="@drawable/rounded_corner"/>
    </LinearLayout>
</RelativeLayout>
